# NeoTerm-pr

./: .gitignore  PROOT_MIGRATION.md  README.md  build.gradle
app/: CMakeLists.txt  build.gradle  debug.keystore
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: neoterm.cpp
app/src/main/cpp/ukfs/: ukfs.cmake
app/src/main/cpp/ukfs/include/linux/: fs.h  time.h
app/src/main/cpp/ukfs/include/ukernel/: proxy.h
app/src/main/cpp/ukfs/shim/fs/: ukfsd.c  vfs.c
app/src/main/cpp/ukfs/test/: fs_redirect_test.c  loopmnt.c  run_proot_it.sh  ukfsd_e2e.py
app/src/main/cpp/ukwifi/: ukwifi.cmake
app/src/main/cpp/ukwifi/hcd/: mock_hcd.c  usbfs_hcd.c
app/src/main/cpp/ukwifi/nl/: genl_ctrl.c  netlink_msg.c  netlink_msg.h  nl80211_cmds.c  nl_dispatch.c  nl_dispatch.h  nlglue.c  rtnetlink.c  sysfs.h  uknl_common.h  ukwifi_nl.h  userver_client.h  userver_client_inproc.c
app/src/main/cpp/ukwifi/server/: modmgr.c  modmgr.h  userver.c  wsysfs.c  wsysfs.h
app/src/main/cpp/ukwifi/shim/: fw.c  libc_compat.c
app/src/main/cpp/ukwifi/shim/net/: ieee80211.c  netdev.c  skbuff.c
app/src/main/cpp/ukwifi/shim/usb/: usb_core.c
app/src/main/cpp/ukwifi/stack/cfg80211/: cfg80211_core.c
app/src/main/cpp/ukwifi/stack/mac80211/: mac80211_core.c
app/src/main/java/io/neoterm/backend/: Sixel.java  TerminalBitmap.java  TerminalBuffer.java  TerminalEmulator.java  TerminalRow.java  (+3 more)
app/src/main/res/layout/: ui_about.xml  ui_main.xml
app/src/main/res/menu/: menu_pm.xml
app/src/main/res/values/: preference_keys.xml  strings.xml
app/src/main/res/xml/: setting_general.xml
(+70 files in other folders)
